--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-<h1>BCI Challenge</h1>
+<h1>BCI Challenge</h1><span>Autor: Julio César Huacho Castro</span>
 <form [formGroup]="productForm" (ngSubmit)="onSubmit()" class="product-form">
-  <h2 class="form-title">Registro de producto</h2>
+  <h2 class="form-title">Registro de producto 
+    <ng-container *ngIf="currentId">
+      ID: {{ currentId }}
+    </ng-container>
+  </h2>
 
   <div class="form-grid">
     <mat-form-field appearance="fill" class="textarea-field">
@@ -12,9 +16,7 @@
         placeholder="Enter product title"
       >
       </textarea>
-      <mat-error
-        *ngIf="titleControl?.errors?.['required'] && titleControl?.touched"
-      >
+      <mat-error *ngIf="titleControl?.errors?.['required'] && titleControl?.dirty">
         El título es requerido
       </mat-error>
     </mat-form-field>
@@ -29,9 +31,7 @@
           {{ currency.label }}
         </mat-option>
       </mat-select>
-      <mat-error
-        *ngIf="currencyControl?.errors?.['required'] && currencyControl?.touched"
-      >
+      <mat-error *ngIf="currencyControl?.errors?.['required'] && currencyControl?.dirty">
         La moneda es requerida
       </mat-error>
     </mat-form-field>
@@ -46,12 +46,10 @@
         min="0"
         placeholder="0.00"
       />
-      <mat-error
-        *ngIf="priceControl?.errors?.['required'] && priceControl?.touched"
-      >
+      <mat-error *ngIf="priceControl?.errors?.['required'] && priceControl?.dirty">
         El precio es requerido
       </mat-error>
-      <mat-error *ngIf="priceControl?.errors?.['min'] && priceControl?.touched">
+      <mat-error *ngIf="priceControl?.errors?.['min'] && priceControl?.dirty">
         El precio debe ser mayor a 0
       </mat-error>
     </mat-form-field>
@@ -59,15 +57,27 @@
     <div class="checkbox-field">
       <mat-checkbox formControlName="isPrime"> Envío Premium </mat-checkbox>
     </div>
-
-    <button
+    <div class="content-button">
+      <button
       mat-raised-button
       color="primary"
       type="submit"
       class="submit-button"
+      [disabled]="!productForm.valid"
     >
       Guardar
     </button>
+
+    <button *ngIf="currentId"
+      mat-raised-button
+      class="submit-button"
+      (click)="onClear()" 
+      type="button"
+    >
+      Limpiar
+    </button>
+    </div>
+    
   </div>
 </form>
 
@@ -94,7 +104,7 @@
     <ng-container matColumnDef="currency">
       <th mat-header-cell *matHeaderCellDef>Moneda</th>
       <td mat-cell *matCellDef="let element">
-        {{ getCurrencyLabel(element.currency) }}
+        {{ getCurrencyLabel(element.currency) || element.currency  }}
       </td>
     </ng-container>
 
@@ -133,4 +143,10 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
+  <mat-paginator 
+    [pageSizeOptions]="[5, 10, 25]"
+    [pageSize]="10"
+    showFirstLastButtons
+    aria-label="Seleccionar página">
+  </mat-paginator>
 </div>
